# mtasa-server-updater

./: .gitignore  LICENSE  Pipfile  pyproject.toml  setup.py  update_server.py
