[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mta_server_updater"
version = "0.1.0"
authors = [
  { name="Nikita Obrekht", email="obrekht@gmail.com" },
]
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "requests",
    "colorama",
    "tqdm",
    "beautifulsoup4",
]

[project.scripts]
updmtaserver = "update_server:cli"

[tool.setuptools]
py-modules=["update_server"]
